--- a/app/views/stops/show.html.erb
+++ b/app/views/stops/show.html.erb
@@ -1,8 +1,8 @@
 <h1><u>Viewing: Stop ID <%= @stop.id %></u></h1>
-
+<p>Bus No. <%= @stop.bus %></p>
+<p>Time: <%= @stop.time %></p>
 <p>Line : <%= @stop.line.color %></p>
 <p>Station: <%= @stop.station.name %></p>
-<p>Time: <%= @stop.time %></p>
 
 <%= link_to "Edit stop", edit_stop_path(@stop), :class=> "btn btn-default" %><br>
 <p><%= link_to "Delete", stop_path(@stop),
