--- a/app/views/stops/index.html.erb
+++ b/app/views/stops/index.html.erb
@@ -1,5 +1,5 @@
 <% content_for(:title, "Bus Stops") %>
-
+<div class="container">
 <h1> Bus Stops </h1>
 
 <ul>
@@ -22,3 +22,4 @@
   <li><a href="/stations/<%= station.id %>" > Station: <%= station.name %></a></li>
 <% end %>
 </ul>
+</div>
