--- a/app/views/lines/new.html.erb
+++ b/app/views/lines/new.html.erb
@@ -1,6 +1,7 @@
 <% content_for(:title, "New Line") %>
-
+<div class="container">
 <h1>New Line</h1>
 
 <%= render "form" %><br>
 <%= link_to "Go Back", new_stop_path, :class=> "btn btn-default" %>
+</div>
