--- a/app/views/stations/new.html.erb
+++ b/app/views/stations/new.html.erb
@@ -1,6 +1,8 @@
 <% content_for(:title, "New Station") %>
 
+<div class="container">
 <h1>New Station</h1>
 
 <%= render "form" %><br>
 <%= link_to "Go Back", new_stop_path, :class=> "btn btn-default" %>
+</div>
