--- a/app/views/stops/edit.html.erb
+++ b/app/views/stops/edit.html.erb
@@ -1,7 +1,7 @@
 <% content_for(:title, "Edit Stop") %>
-
+<div class="container">
 <h1>Edit Stop</h1>
 
 <%= render "form" %><br>
 <%= link_to "Go Back", stop_path, :class=> "btn btn-default" %>
-
+</div>
