--- a/app/views/stops/new.html.erb
+++ b/app/views/stops/new.html.erb
@@ -1,4 +1,5 @@
 <% content_for(:title, "New Stop") %>
+<div class="container">
 
 <h1>New Stop</h1>
 
@@ -6,4 +7,4 @@
 <a href="/lines/new" class="btn btn-default"> Create a new Line</a><br><br>
 <a href="/stations/new" class="btn btn-default"> Create a new Station</a><br><br>
 <%= link_to "Go Back", stops_path, :class=> "btn btn-default" %>
-
+</div>
